=======================================================================================================================
                                           Version 0.85->0.85u1
=======================================================================================================================

UserPreferencesDialog.properties
===================================
Added:

checkUseRecycleBin.text=Use system recycle &bin for deleting files

MainApp.properties
===================================
Added:

searchSubtitlesAction.Action.text=Search subtitles
searchSubtitlesAction.Action.shortDescription=Search subtitles using opensubtitles.org
searchSubtitlesAction.Action.smallIcon=${iconsPath}subtitles.png


=======================================================================================================================
                                            Version 0.83->0.85
=======================================================================================================================


NEW FILES:
ExportLinksTask.properties
ImportLinksTask.properties


UpdateDialog.properties
===================================
New:
stateOldPlugin=NOT SUPPORTED


InformationDialog.properties
===================================
New:
connectionLabel.text=Co&nnection:

Changed:
was:
InformationDialog.title=File Information
new:
InformationDialog.title=Download Information


DownloadTask.properties
====================================
New:
InsertPassword=Insert Password
ErrorDuringDownload=Error during download.\nStream was closed unexpectedly.\nFile is not complete
fileAlreadyExistsTooltip=File already exists on the disk


MainApp.properties
====================================
#Changed: