@@ -1,4 +1,14 @@
 =======================================================================================================================
+                                           Version 0.85u1->0.86
+=======================================================================================================================
+MainApp.properties
+===================================
+Added:
+fileIsBeingAlreadyDownloading=File is being already downloading.
+
+
+
+=======================================================================================================================
                                            Version 0.85->0.85u1
 =======================================================================================================================
 
